# Voxel_Downsampling

./: CMakeLists.txt  README.md  Voxel_downsampling.sln  Voxel_downsampling.vcxproj  dataXYZ1.LiData  dataXYZ1_downsampled.LiData  main_voxel_reconstruction.cu  point_cloud_mine.csv  surface.csv  surface_reconstruction.cpp  voxel_downsampling_cpu.cpp  voxel_structure.cu
MATLAB/: generate_sphere.m
MATLAB/mining_data/: dataXYZ1.pcd  dataXYZ3.pcd  dataXYZ4.csv  dataXYZ5.csv  dataXYZ5.pcd  esfera_mina_sin_trasl.mat  malla_triangular_sin_trasl.mat
Voxel_downsampling/: PASS1_idx.csv  Voxel_downsampling.vcxproj  Voxel_downsampling.vcxproj.filters  dataXYZ1_downsampled.csv  log_voxels.csv  main_voxel_reconstruction.cu  matlab_downsampling.LiData  matlab_downsampling.csv  surface_reconstruction.cpp  surface_reconstruction.cu  utlis.cu  utlis.h  voxe_structure.cu  voxel_downsampling_1.cpp  voxel_downsampling_cpu.cpp  voxel_histogram.m  voxel_structure.cu
Voxel_downsampling/MATLAB/: surface_reconstruction.m  test_downsampling.m  test_surface_reconstruction.m  voxel_downsampling.m
Voxel_downsampling/MATLAB/mining_data/: dataXYZ1.csv  dataXYZ2.csv  dataXYZ2.pcd  dataXYZ3.csv  dataXYZ4.pcd  dataXYZ6.csv  dataXYZ6.pcd  dataXYZ7.csv  dataXYZ7.pcd  mesh.vtk  nube_puntos_sin_trasl.mat  obtener_datos.m
